--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,15 @@ authors = ["Hanming Zhu <hanming@huawen.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 python-telegram-bot = "^13.4.1"
-python-dotenv = "^0.17.0"
-selenium = "^3.141.0"
-webdriver-manager = "^3.4.0"
+python-dotenv = "^1.0.1"
+selenium = "^4.21.0"
 SQLAlchemy = "^1.4.11"
 alembic = "^1.5.8"
 Cerberus = "^1.3.3"
 psycopg2 = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
-black = "^21.4b2"
+black = "^24.4.2"
 isort = "^5.8.0"
 flake8 = "^3.9.1"
 pytest = "^6.2.3"
