--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,33 @@
-alembic==1.7.5; python_version >= "3.6"
-apscheduler==3.6.3; python_version >= "3.6"
-cachetools==4.2.2; python_version >= "3.6" and python_version < "4.0"
-cerberus==1.3.4; python_version >= "2.7"
-certifi==2021.10.8; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-charset-normalizer==2.0.9; python_full_version >= "3.6.0" and python_version >= "3.6"
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-configparser==5.2.0; python_version >= "3.6"
-crayons==0.4.0; python_version >= "3.6"
-greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
-idna==3.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-mako==1.1.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-markupsafe==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-psycopg2==2.9.2; python_version >= "3.6"
-python-dotenv==0.17.1
-python-telegram-bot==13.9; python_version >= "3.6"
-pytz-deprecation-shim==0.1.0.post0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-pytz==2021.3; python_version >= "3.6"
-requests==2.26.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-selenium==3.141.0
-six==1.16.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6"
-sqlalchemy==1.4.28; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-tornado==6.1; python_version >= "3.6"
-tzdata==2021.5; platform_system == "Windows" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
-tzlocal==4.1; python_version >= "3.6"
-urllib3==1.26.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-webdriver-manager==3.5.2; python_version >= "3.6"
+alembic==1.13.1; python_version >= "3.8"
+apscheduler==3.6.3; python_version >= "3.7"
+attrs==23.2.0; python_version >= "3.8"
+cachetools==4.2.2; python_version >= "3.7" and python_version < "4.0"
+cerberus==1.3.5
+certifi==2024.6.2; python_version >= "3.8"
+cffi==1.16.0; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.8"
+exceptiongroup==1.2.1; python_version < "3.11" and python_version >= "3.8"
+greenlet==3.0.3; python_version >= "3.7" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.8")
+h11==0.14.0; python_full_version >= "3.7.0" and python_version >= "3.8"
+idna==3.7; python_version >= "3.8"
+mako==1.3.5; python_version >= "3.8"
+markupsafe==2.1.5; python_version >= "3.8"
+outcome==1.3.0.post0; python_version >= "3.8"
+psycopg2==2.9.9; python_version >= "3.7"
+pycparser==2.22; os_name == "nt" and implementation_name != "pypy" and python_version >= "3.8"
+pysocks==1.7.1; python_version >= "3.8" and python_full_version < "3.0.0" or python_version >= "3.8" and python_full_version >= "3.4.0"
+python-dotenv==1.0.1; python_version >= "3.8"
+python-telegram-bot==13.15; python_version >= "3.7"
+pytz==2024.1; python_version >= "3.7"
+selenium==4.21.0; python_version >= "3.8"
+six==1.16.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.7"
+sniffio==1.3.1; python_version >= "3.8"
+sortedcontainers==2.4.0; python_version >= "3.8"
+sqlalchemy==1.4.52; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+tornado==6.1; python_version >= "3.7"
+trio-websocket==0.11.1; python_version >= "3.8"
+trio==0.25.1; python_version >= "3.8"
+typing-extensions==4.12.1; python_version >= "3.8"
+tzdata==2024.1; platform_system == "Windows" and python_version >= "3.8"
+tzlocal==5.2; python_version >= "3.8"
+urllib3==2.2.1; python_version >= "3.8"
+wsproto==1.2.0; python_full_version >= "3.7.0" and python_version >= "3.8"
